--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BanglaRise.live</title>
+    <title>banglarise.radio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -22,13 +22,25 @@
                 </div>
                 <audio id="radioPlayer" src="https://s5.radio.co/s5fa3ce8b2/listen" type="audio/mpeg"></audio>
             </div>
+            <p style="width: 600px;">পাহাড়সম স্বৈরাচারের সামনে আমি ক্ষুদ্র সুবোধ। চব্বিশের জুলাই আমাকে শেকল ভাঙার সাহস দেয়, আর এই রেডিও আমার ছোট্ট প্রতিবাদের মাধ্যম। </p>
+
+            <p style="width: 400px;">এই পথ অনেক দীর্ঘ। আসুন সংঘটিত হয়। এইটুকু হয়তো বুঝতে পারছেন একটা বড় জনমত তৈরী ছাড়া এই দুঃস্বপ্ন কাটবে না।  </p>
+
+            <p style="color: red; font-weight: bold; width: 800px;">সংবিধিবদ্ধ সতর্কীকরণঃ  এই রেডিওতে ব্যবহার করা গান, কবিতা, খবর, সবই বিভিন্ন জায়গা থেকে সংকলিত।  যারা এইসব এর অরিজিনাল ক্রিয়েটর তাদের কাছে অনুমতি না চাওয়ার জন্য দুঃখিত।  যদি আপনি না চান আপনার গান বা কবিতা ব্যবহার করা না হোক, টেলিগ্রাম এর চ্যানেল এ যোগাযোগ করুন।</p>
+
+            <p style="width: 600px;">আর কিভাবে এই রেডিও কে সমৃদ্ধ করা যাই জানাতে চান তাহলে টেলিগ্রাম চ্যানেলে জয়েন করুন। ভলান্টিয়ার হতে চাইলেও যোগাযোগ করুন।  এখন পর্যন্ত আমি একা সামলানোর চেষ্টা করছি।  </p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
             
         </div>
     </header>
 
     <footer>
-        <p>BanglaRise.live</p>
         <p>#<a href="">StepDownHasina</a></p>
+        <a href="https://t.me/+Womgon18gwI3YWQ1" style="color: black;">Join our Telegram channel</a>
     </footer>
     <script src="script.js"></script>
 </body>
