--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <p style="width: 400px;">এই পথ অনেক দীর্ঘ। আসুন সংঘটিত হয়। এইটুকু হয়তো বুঝতে পারছেন একটা বড় জনমত তৈরী ছাড়া এই দুঃস্বপ্ন কাটবে না।  </p>
 
-            <p style="color: red; font-weight: bold; width: 800px;">সংবিধিবদ্ধ সতর্কীকরণঃ  এই রেডিওতে ব্যবহার করা গান, কবিতা, খবর, সবই বিভিন্ন জায়গা থেকে সংকলিত।  যারা এইসব এর অরিজিনাল ক্রিয়েটর তাদের কাছে অনুমতি না চাওয়ার জন্য দুঃখিত।  যদি আপনি না চান আপনার গান বা কবিতা ব্যবহার করা না হোক, টেলিগ্রাম এর চ্যানেল এ যোগাযোগ করুন।</p>
+            <p style="color: red; font-weight: bold; width: 800px;">এই রেডিওতে ব্যবহার করা গান, কবিতা, খবর, সবই বিভিন্ন জায়গা থেকে সংকলিত।  যারা এইসব এর অরিজিনাল ক্রিয়েটর তাদের কাছে অনুমতি না চাওয়ার জন্য দুঃখিত।  যদি আপনি না চান আপনার গান বা কবিতা ব্যবহার করা না হোক, টেলিগ্রাম এর চ্যানেল এ যোগাযোগ করুন।</p>
 
             <p style="width: 600px;">আর কিভাবে এই রেডিও কে সমৃদ্ধ করা যাই জানাতে চান তাহলে টেলিগ্রাম চ্যানেলে জয়েন করুন। ভলান্টিয়ার হতে চাইলেও যোগাযোগ করুন।  এখন পর্যন্ত আমি একা সামলানোর চেষ্টা করছি।  </p>
             <p></p>
